--- a/app/src/main/res/layout/fragment_create_theme.xml
+++ b/app/src/main/res/layout/fragment_create_theme.xml
@@ -26,8 +26,164 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <Button
+            android:id="@+id/prev_bg_color"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="?attr/colorCalendarOutline"
+            android:stateListAnimator="@null"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_style_header" />
+
+        <ImageButton
+            android:id="@+id/btn_bg_color"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_colorize_24"
+            app:layout_constraintStart_toEndOf="@+id/prev_bg_color"
+            app:layout_constraintTop_toBottomOf="@+id/tv_style_header"
+            app:tint="?attr/colorCalendarOutline" />
+
+        <Button
+            android:id="@+id/prev_accent_color"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="7dp"
+            android:backgroundTint="?attr/colorCalendarOutline"
+            android:stateListAnimator="@null"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/prev_bg_color" />
+
+        <ImageButton
+            android:id="@+id/btn_accent_color"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="9dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_colorize_24"
+            app:layout_constraintStart_toEndOf="@+id/prev_accent_color"
+            app:layout_constraintTop_toBottomOf="@+id/btn_bg_color"
+            app:tint="?attr/colorCalendarOutline" />
+
+        <Button
+            android:id="@+id/prev_hlight_color"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="7dp"
+            android:backgroundTint="?attr/colorCalendarOutline"
+            android:stateListAnimator="@null"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/prev_accent_color" />
+
+        <ImageButton
+            android:id="@+id/btn_hlight_color"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="9dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_colorize_24"
+            app:layout_constraintStart_toEndOf="@+id/prev_outline_color"
+            app:layout_constraintTop_toBottomOf="@+id/btn_accent_color"
+            app:tint="?attr/colorCalendarOutline" />
+
+        <Button
+            android:id="@+id/prev_outline_color"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="7dp"
+            android:backgroundTint="?attr/colorCalendarOutline"
+            android:stateListAnimator="@null"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/prev_hlight_color" />
+
+        <ImageButton
+            android:id="@+id/btn_outline_color"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="9dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_colorize_24"
+            app:layout_constraintStart_toEndOf="@+id/prev_hlight_color"
+            app:layout_constraintTop_toBottomOf="@+id/btn_hlight_color"
+            app:tint="?attr/colorCalendarOutline" />
+
+        <Button
+            android:id="@+id/prev_main_text_color"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="?attr/colorCalendarOutline"
+            android:stateListAnimator="@null"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_text_header" />
+
+        <ImageButton
+            android:id="@+id/btn_main_text_color"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_colorize_24"
+            app:layout_constraintStart_toEndOf="@+id/prev_main_text_color"
+            app:layout_constraintTop_toBottomOf="@+id/tv_text_header"
+            app:tint="?attr/colorCalendarOutline" />
+
+        <Button
+            android:id="@+id/prev_hlight_text_color"
+            android:layout_width="50dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="200dp"
+            android:layout_marginTop="7dp"
+            android:backgroundTint="?attr/colorCalendarOutline"
+            android:stateListAnimator="@null"
+            app:cornerRadius="20dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/prev_main_text_color" />
+
+        <ImageButton
+            android:id="@+id/btn_hlight_text_color"
+            android:layout_width="33dp"
+            android:layout_height="33dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="9dp"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:scaleType="fitCenter"
+            android:src="@drawable/baseline_colorize_24"
+            app:layout_constraintStart_toEndOf="@+id/prev_hlight_text_color"
+            app:layout_constraintTop_toBottomOf="@+id/btn_main_text_color"
+            app:tint="?attr/colorCalendarOutline" />
+
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tv_style_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -38,7 +194,7 @@
             app:layout_constraintTop_toBottomOf="@+id/input_theme_name" />
 
         <View
-            android:id="@+id/view2"
+            android:id="@+id/hl_style_header"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginStart="25dp"
@@ -46,10 +202,10 @@
             android:background="#848282"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_style_header" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_bg_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -58,24 +214,10 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-        <Button
-            android:id="@+id/button3"
-            android:layout_width="90dp"
-            android:layout_height="43dp"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="5dp"
-            android:backgroundTint="@color/white"
-            android:stateListAnimator="@null"
-            app:cornerRadius="20dp"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:strokeColor="@color/light_outline"
-            app:strokeWidth="2dp" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_style_header" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/tv_accent_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -84,10 +226,10 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_bg_color" />
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/tv_hlight_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -96,10 +238,10 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_accent_color" />
 
         <TextView
-            android:id="@+id/textView6"
+            android:id="@+id/tv_outline_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -108,21 +250,21 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_hlight_color" />
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/tv_text_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
             android:layout_marginTop="30dp"
+            android:fontFamily="@font/inter_bold"
             android:text="TEXT COLOR"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_outline_color" />
 
         <View
-            android:id="@+id/view3"
+            android:id="@+id/hl_text_header"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginStart="25dp"
@@ -130,10 +272,10 @@
             android:background="#848282"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_text_header" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/tv_main_text_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -142,10 +284,10 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_text_header" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/tv_hlight_text_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
@@ -154,33 +296,33 @@
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_main_text_color" />
 
         <Button
-            android:id="@+id/button"
-            android:layout_width="105dp"
+            android:id="@+id/btn_create_theme_cancel"
+            android:layout_width="110dp"
             android:layout_height="50dp"
             android:layout_marginStart="75dp"
             android:layout_marginTop="65dp"
             android:backgroundTint="@color/light_outline"
+            android:stateListAnimator="@null"
             android:text="CANCEL"
             app:cornerRadius="7dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            android:stateListAnimator="@null" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_hlight_text_color" />
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="105dp"
+            android:id="@+id/btn_create_theme_save"
+            android:layout_width="110dp"
             android:layout_height="50dp"
             android:layout_marginTop="65dp"
             android:layout_marginEnd="75dp"
             android:backgroundTint="@color/light_accent"
+            android:stateListAnimator="@null"
             android:text="SAVE"
             app:cornerRadius="7dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView9"
-            android:stateListAnimator="@null" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_hlight_text_color" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
